Bug 438818 - 'Filter in Tag' doesn't work in default(=without touching anything) state
Summary: 'Filter in Tag' doesn't work in default(=without touching anything) state
Status: RESOLVED FIXED
Alias: None
Product: krita
Classification: Applications
Component: Tagging (other bugs)
Version First Reported In: nightly build (please specify the git hash!)
Platform: Compiled Sources All
: NOR normal
Target Milestone: ---
Assignee: Krita Bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2021-06-17 17:14 UTC by acc4commissions
Modified: 2021-06-22 15:01 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description acc4commissions 2021-06-17 17:14:02 UTC
SUMMARY
5.0 prealpha git 76b3db3



STEPS TO REPRODUCE
1. Open Krita, and (without touching it) just make sure that 'Filter in Tag' is checked in Brush Presets docker.
2. Select any tag.
3. Search anything using the search field.

OBSERVED RESULT
The docker will search the presets within All category, and not within the currently selected tag.

After unchecking 'Filter in Tag' and rechecking it it starts to work.

EXPECTED RESULT
It should search the presets within the currently selected tag.

SOFTWARE/OS VERSIONS
Windows: Win10
macOS: 
Linux/KDE Plasma: 
(available in About System)
KDE Plasma Version: 
KDE Frameworks Version: 
Qt Version: 

ADDITIONAL INFORMATION
Comment 1 Tiar 2021-06-22 15:01:50 UTC
Git commit ee24b937d3e2aebffdb7ad825dd5c5bd7d711e76 by Agata Cacko.
Committed on 22/06/2021 at 15:01.
Pushed by tymond into branch 'master'.

Fix "filter by tag" when checked on startup

Before this commit, if the user opened Krita and "filter by tag"
was enabled and the user tried to search for some brushes,
Krita would ignore the checked "filter by tag" option
and show all brushes with all tags. Only after checking
and rechecking the bool it would work.
This commit fixes that behaviour by only showing the relevant
brushes.

M  +2    -0    libs/resourcewidgets/KisResourceTaggingManager.cpp
M  +5    -0    libs/resourcewidgets/KisTagFilterWidget.cpp
M  +2    -0    libs/resourcewidgets/KisTagFilterWidget.h

https://invent.kde.org/graphics/krita/commit/ee24b937d3e2aebffdb7ad825dd5c5bd7d711e76